<resources>
    <string name="app_name">HackathonAndroid</string>
    <string name="create_text_btn">Создать</string>
    <string name="favorites_text_btn">Избранное</string>
    <string name="contact_text_btn">Контакты</string>
    <string name="map_text_btn">Карта</string>
    <string name="home_text_btn">Главная</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="iv_place_text">PlaceImage</string>
    <string name="blue">FIRST</string>
    <string name="brown">SECOND</string>
    <string name="main_theme">DEFAULT</string>
    <string name="button_text">Log in</string>
    <string name="password_hint">Input your password</string>
    <string name="username_hint">Input your name</string>
    <string name="addFoto">Add Foto</string>
    <string name="saveMarker">Save Marker</string>
    <string name="title">Заголовок</string>
    <string name="fullText">Описание</string>
    <string name="error_havent_event_text">Нет данных</string>

    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
</resources>
