<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_btn"
        android:icon="@drawable/home"
        android:title="@string/home_text_btn" />

    <item
        android:id="@+id/create_btn"
        android:icon="@drawable/plus_3"
        android:title="@string/create_text_btn" />

    <item
        android:id="@+id/favorites_btn"
        android:icon="@drawable/star"
        android:title="@string/favorites_text_btn" />

    <item
        android:id="@+id/contacts_btn"
        android:icon="@drawable/user"
        android:title="@string/contact_text_btn" />

    <item
        android:id="@+id/map_btn"
        android:icon="@drawable/placeholder"
        android:title="@string/map_text_btn" />

</menu>
