<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEventFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:src="@drawable/uteam"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="https://imgur.com/a/bZWvZqZ"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/editText"
            android:hint="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editText2"
            android:hint="@string/fullText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/saveMarker"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            tools:layout_editor_absoluteX="0dp"
            android:text="@string/saveMarker"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            tools:ignore="MissingConstraints" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>